corrected align items in section 4

--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,7 @@ iframe {
     background-color: darkslateblue;
     height: 500px;
     display: flex;
-align items: center;
+align-items: center;
 justify-content: center;
 
 }
